<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_blood_pressure_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/v_sign"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:background="@color/colorNormal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/v_sign"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="正常血压" />

            <TextView
                android:id="@+id/tv_sys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_sys_hint"
                app:layout_constraintEnd_toStartOf="@id/tv_dia"
                app:layout_constraintStart_toEndOf="@id/v_sign"
                app:layout_constraintTop_toBottomOf="@id/tv_result"
                tools:text="100" />

            <TextView
                android:id="@+id/tv_sys_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/blood_pressure_sys"
                android:textColor="@color/colorTextSecondary"
                app:layout_constraintBottom_toTopOf="@id/tv_measure_time"
                app:layout_constraintEnd_toEndOf="@id/tv_sys"
                app:layout_constraintStart_toStartOf="@id/tv_sys"
                app:layout_constraintTop_toBottomOf="@id/tv_sys" />

            <TextView
                android:id="@+id/tv_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_dia_hint"
                app:layout_constraintEnd_toStartOf="@id/tv_pul"
                app:layout_constraintStart_toEndOf="@id/tv_sys"
                app:layout_constraintTop_toBottomOf="@id/tv_result"
                tools:text="80" />

            <TextView
                android:id="@+id/tv_dia_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/blood_pressure_dia"
                android:textColor="@color/colorTextSecondary"
                app:layout_constraintBottom_toTopOf="@id/tv_measure_time"
                app:layout_constraintEnd_toEndOf="@id/tv_dia"
                app:layout_constraintStart_toStartOf="@id/tv_dia"
                app:layout_constraintTop_toBottomOf="@id/tv_dia" />

            <TextView
                android:id="@+id/tv_pul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_pul_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_dia"
                app:layout_constraintTop_toBottomOf="@id/tv_result"
                tools:text="70" />

            <TextView
                android:id="@+id/tv_pul_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/blood_pressure_pul"
                android:textColor="@color/colorTextSecondary"
                app:layout_constraintBottom_toTopOf="@id/tv_measure_time"
                app:layout_constraintEnd_toEndOf="@id/tv_pul"
                app:layout_constraintStart_toStartOf="@id/tv_pul"
                app:layout_constraintTop_toBottomOf="@id/tv_pul" />

            <TextView
                android:id="@+id/tv_measure_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="2021年2月26日 星期三 20:40:40" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>